--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ Day 1 27/02/2023: IR drop basics </br></br>
 2. current
 <table>
   <tr>
-    <th>Current</th>
+    <th></th>
     <th></th>
     <th></th>
   </tr>
 
   <tr>
-    <td></td>
+    <td>Current</td>
     <td>Ptiavg </td>
     <td>VDD net to instance PG pin (red traingle)</td>
   </tr>
