--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@ EFf R:?></br></br>
 Ans: Views from PGV and to sync the current from ptiavg files</br>
 2. What the role of tap points and tap current?</br>
 3. How the tool is picking current source? Which are reported in lof file (circuit profile)?</br>
-
+Ans: As per Likhitha, current source is coming from PGV.
   </body>
 </html>
